# panelmodels

./: .gitignore  dev.ipynb  pyproject.toml
src/panelmodels/: api.py  sklearn_api.py  solver.py
tests/: api.py  dgp.py  test_sklearn_api.py  test_solver.py
